--- a/files/webgw/nginx/ceph.conf.j2
+++ b/files/webgw/nginx/ceph.conf.j2
@@ -2,15 +2,13 @@
 {% if nginx_upstreams | selectattr('name', 'search', 'ceph-dashboard') %}
 {% set domain = domains['hb'] %}
 server {
-    listen 80;
-    listen [::]:80;
+    {{ nginx_listen_http | indent(4) }}
     server_name ceph.{{ domain }};
     return 301 https://$host$request_uri;
 }
 
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    {{ nginx_listen_https | indent(4) }}
     http2 on;
     server_name ceph.{{ domain }};
 
@@ -38,15 +36,13 @@ server {
 {% if nginx_upstreams | selectattr('name', 'search', 'ceph-rgw') %}
 {% set domain = domains['hb'] %}
 server {
-    listen 80;
-    listen [::]:80;
+    {{ nginx_listen_http | indent(4) }}
     server_name rgw.{{ domain }};
     return 301 https://$host$request_uri;
 }
 
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    {{ nginx_listen_https | indent(4) }}
     http2 on;
     server_name rgw.{{ domain }};
 
