--- a/files/webgw/nginx/dv-main.conf.j2
+++ b/files/webgw/nginx/dv-main.conf.j2
@@ -2,15 +2,13 @@
 {% if nginx_upstreams | selectattr('name', 'search', 'dv-main') %}
 {% set domain = domains['dv'] %}
 server {
-    listen 80;
-    listen [::]:80;
+    {{ nginx_listen_http | indent(4) }}
     server_name {{ domain }} www.{{ domain }};
     return 301 https://$host$request_uri;
 }
 
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    {{ nginx_listen_https | indent(4) }}
     http2 on;
     server_name {{ domain }} www.{{ domain }};
 
