Talos 1.8.4 and Kubernetes 1.31.4

--- a/files/talos/gen-config-patch.yaml.j2
+++ b/files/talos/gen-config-patch.yaml.j2
@@ -25,6 +25,8 @@ machine:
   install:
     image: "{{ talos_image }}"
     disk: /dev/disk/by-id/virtio-root01
+    extraKernelArgs:
+      - console=ttyS0
   network:
     nameservers: {{ vm_default_nic.dns_servers[:2] | to_json }}
   kubelet:
