Use kernel SMB and NFS daemons for CephFS
cephadm managed ones are too annoying to manage with weird quirks.
Samba disconnects on MacOS when failover occurs.

--- a/files/inventory/40-net-late-merge-and-vips.j2
+++ b/files/inventory/40-net-late-merge-and-vips.j2
@@ -39,6 +39,7 @@ vips:
     localgw03: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(3, wantlist=true) }}
     ceph_nfs: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(4, wantlist=true) }}
   general:
+    smb: {{ subnets.general.vips | andrei.utils.ipaddr_concat(1, wantlist=true) }}
     ceph_nfs: {{ subnets.general.vips | andrei.utils.ipaddr_concat(4, wantlist=true) }}
   san:
     ceph_nfs: {{ subnets.san.vips | andrei.utils.ipaddr_concat(4, wantlist=true) }}
