Support lock_file and random_delay in Borg

--- a/roles/borg/templates/backup.service.j2
+++ b/roles/borg/templates/backup.service.j2
@@ -7,7 +7,11 @@ After=network-online.target
 {% endif %}
 
 [Service]
+{% if conf.lock_file is defined %}
+ExecStart=/usr/bin/flock -x {{ conf.lock_file }} {{ borg_backup_script_path }}/backup-{{ conf.name }}
+{% else %}
 ExecStart={{ borg_backup_script_path }}/backup-{{ conf.name }}
+{% endif %}
 
 [Install]
 WantedBy=multi-user.target
