Change Flux to track master branch

--- a/files/talos/flux-gitlab.yml.j2
+++ b/files/talos/flux-gitlab.yml.j2
@@ -8,7 +8,7 @@ spec:
   interval: 1m0s
   url: "ssh://git@gitlab.{{ domains['dv'] }}/flux/talos"
   ref:
-    branch: test
+    branch: master
   secretRef:
     name: gitlab-ssh-credentials
 ---
