--- a/files/k8s/prom.yml.j2
+++ b/files/k8s/prom.yml.j2
@@ -1,6 +1,10 @@
 # https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-prometheus-stack/values.yaml
 ---
 
+crds:
+  upgradeJob:
+    enabled: true
+
 alertmanager:
   enabled: true
   ingress:
