--- a/files/inventory/20-net-subnets.yml.j2
+++ b/files/inventory/20-net-subnets.yml.j2
@@ -19,7 +19,7 @@ __subnet_extensions:
   "localgw": 28,
   "_r10": 30,
   "pg": 30,
-  "_r11": 31,
+  "gitea": 31,
   "gitlab": 31,
   "gitrun": 30,
   "loki": 30,
