--- a/files/talos/cilium-values.yml.j2
+++ b/files/talos/cilium-values.yml.j2
@@ -49,9 +49,12 @@ hubble:
   ui:
     enabled: true
 
+gatewayAPI:
+  enabled: true
+
+ingressController:
 # https://github.com/cilium/cilium/issues/29967
-# ingressController:
-#   enabled: true
+  enabled: false
 #   loadbalancerMode: shared
 #   service:
 #     # Local isn't being advertised (and doesn't preserve client IPs anyway)
