--- a/files/gitlab/gitlab.rb.j2
+++ b/files/gitlab/gitlab.rb.j2
@@ -22,7 +22,14 @@ nginx['ssl_certificate_key'] = "{{ gitlab_ssl_certificate_key }}"
 letsencrypt['enable'] = {{ gitlab_letsencrypt_enable }}
 
 # The directory where Git repositories will be stored.
-git_data_dirs({"default" => {"path" => "{{ gitlab_git_data_dir }}"} })
+gitaly['configuration'] = {
+  storage: [
+    {
+      name: 'default',
+      path: '{{ gitlab_git_data_dir }}/repositories',
+    },
+  ],
+}
 
 # The directory where Gitlab backups will be stored
 gitlab_rails['backup_path'] = "{{ gitlab_backup_path }}"
