--- a/files/talos/flux-gitlab.yml.j2
+++ b/files/talos/flux-gitlab.yml.j2
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m0s
-  url: "ssh://git@gitlab.{{ domains['dv'] }}/flux/talos"
+  url: "ssh://git@gitlab.{{ domains['dv'] }}/flux/infra"
   ref:
     branch: master
   secretRef:
