--- a/files/talos/flux-gitlab.yml.j2
+++ b/files/talos/flux-gitlab.yml.j2
@@ -5,7 +5,7 @@ metadata:
   name: flux-system
   namespace: flux-system
 spec:
-  interval: 1m0s
+  interval: 15m
   url: "ssh://git@gitlab.{{ domains['dv'] }}/flux/infra"
   ref:
     branch: master
@@ -18,7 +18,8 @@ metadata:
   name: flux-system
   namespace: flux-system
 spec:
-  interval: 1m0s
+  interval: 15m
+  retryInterval: 5m
   path: ./flux
   prune: true
   sourceRef:
