--- a/files/inventory/40-net-late-merge-and-vips.j2
+++ b/files/inventory/40-net-late-merge-and-vips.j2
@@ -44,7 +44,11 @@ vips:
     localgw01: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(1, wantlist=true) }}
     localgw02: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(2, wantlist=true) }}
     localgw03: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(3, wantlist=true) }}
+    ceph_nfs: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(4, wantlist=true) }}
   general:
     smb: {{ subnets.general.vips | andrei.utils.ipaddr_concat(1, wantlist=true) }}
+    ceph_nfs: {{ subnets.general.vips | andrei.utils.ipaddr_concat(4, wantlist=true) }}
+  san:
+    ceph_nfs: {{ subnets.san.vips | andrei.utils.ipaddr_concat(4, wantlist=true) }}
   talos:
     control_plane: {{ subnets.talos.vips | andrei.utils.ipaddr_concat(1, wantlist=true) }}
