Use Talos host DNS instead of configuring CoreDNS

--- a/files/talos/gen-config-patch.yaml.j2
+++ b/files/talos/gen-config-patch.yaml.j2
@@ -39,3 +39,6 @@ machine:
     kubePrism:
       enabled: {{ talos_kubeprism_enabled }}
       port: 7445
+    hostDNS:
+      enabled: true
+      forwardKubeDNSToHost: true
