--- a/files/webgw/nginx/ceph.conf.j2
+++ b/files/webgw/nginx/ceph.conf.j2
@@ -48,6 +48,8 @@ server {
     ssl_certificate /etc/lego/certificates/{{ rgw_domain | community.dns.get_registrable_domain }}.crt;
     ssl_certificate_key /etc/lego/certificates/{{ rgw_domain | community.dns.get_registrable_domain }}.key;
 
+    proxy_request_buffering off;
+    proxy_http_version 1.1;
     client_max_body_size 0;
     access_log {{ nginx_sites_logs }}/access-{{ rgw_domain }}.log {{ nginx_access_log_options }};
     error_log {{ nginx_sites_logs }}/error-{{ rgw_domain }}.log {{ nginx_error_log_options }};
