--- a/files/inventory/10-net-base.yml.j2
+++ b/files/inventory/10-net-base.yml.j2
@@ -49,7 +49,7 @@ internal_net:
     cidr6: "{{ supernets.cidr6 | ansible.utils.ipsubnet(64, 100) }}"
 {% endif %}
     vlan: 100
-    mt_lists: [LAN, SEC]
+    mt_lists: [LAN, SEC, ALLOW_MAC]
   san:
 {% if 'cidr' in supernets %}
     cidr: "{{ supernets.cidr | ansible.utils.ipsubnet(24, 2) }}"
