Allow gitea webhooks to my domains

--- a/files/gitea/app.ini.j2
+++ b/files/gitea/app.ini.j2
@@ -89,3 +89,6 @@ INTERVAL = 60
 MODE      = file
 LEVEL     = Warn
 ROOT_PATH = /var/log/gitea
+
+[webhook]
+ALLOWED_HOST_LIST = *.{{ domains['dv'] }}, *.{{ domains['hb'] }}, *.{{ all_net.talos.domain }}
