--- a/roles/mkinitcpio/templates/mkinitcpio.conf.j2
+++ b/roles/mkinitcpio/templates/mkinitcpio.conf.j2
@@ -1,4 +1,4 @@
-# vim:set ft=sh
+# vim:set ft=sh:
 # MODULES
 # The following modules are loaded before any boot hooks are
 # run.  Advanced users may wish to specify all system modules
@@ -34,29 +34,30 @@ FILES=({{ mkinitcpio_files }})
 #
 ##   This setup will autodetect all modules for your system and should
 ##   work as a sane default
-#    HOOKS=(base udev autodetect modconf block filesystems fsck)
+#    HOOKS=(base udev autodetect microcode modconf block filesystems fsck)
 #
 ##   This setup will generate a 'full' image which supports most systems.
 ##   No autodetection is done.
-#    HOOKS=(base udev modconf block filesystems fsck)
+#    HOOKS=(base udev microcode modconf block filesystems fsck)
 #
 ##   This setup assembles a mdadm array with an encrypted root file system.
 ##   Note: See 'mkinitcpio -H mdadm_udev' for more information on RAID devices.
-#    HOOKS=(base udev modconf keyboard keymap consolefont block mdadm_udev encrypt filesystems fsck)
+#    HOOKS=(base udev microcode modconf keyboard keymap consolefont block mdadm_udev encrypt filesystems fsck)
 #
 ##   This setup loads an lvm2 volume group.
-#    HOOKS=(base udev modconf block lvm2 filesystems fsck)
+#    HOOKS=(base udev microcode modconf block lvm2 filesystems fsck)
 #
 ##   This will create a systemd based initramfs which loads an encrypted root filesystem.
-#    HOOKS=(base systemd autodetect modconf kms keyboard sd-vconsole sd-encrypt block filesystems fsck)
+#    HOOKS=(base systemd autodetect microcode modconf kms keyboard sd-vconsole sd-encrypt block filesystems fsck)
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr and fsck hooks.
 HOOKS=({{ mkinitcpio_hooks }})
 # COMPRESSION
 # Use this to compress the initramfs image. By default, zstd compression
-# is used. Use 'cat' to create an uncompressed image.
-#COMPRESSION="zstd"
+# is used for Linux ≥ 5.9 and gzip compression is used for Linux < 5.9.
+# Use 'cat' to create an uncompressed image.
+COMPRESSION="zstd"
 #COMPRESSION="gzip"
 #COMPRESSION="bzip2"
 #COMPRESSION="lzma"
@@ -66,10 +67,14 @@ HOOKS=({{ mkinitcpio_hooks }})
 
 # COMPRESSION_OPTIONS
 # Additional options for the compressor
-#COMPRESSION_OPTIONS=()
+COMPRESSION_OPTIONS=(-9)
 
 # MODULES_DECOMPRESS
-# Decompress kernel modules during initramfs creation.
-# Enable to speedup boot process, disable to save RAM
-# during early userspace. Switch (yes/no).
-#MODULES_DECOMPRESS="yes"
+# Decompress loadable kernel modules and their firmware during initramfs
+# creation. Switch (yes/no).
+# Enable to allow further decreasing image size when using high compression
+# (e.g. xz -9e or zstd --long --ultra -22) at the expense of increased RAM usage
+# at early boot.
+# Note that any compressed files will be placed in the uncompressed early CPIO
+# to avoid double compression.
+#MODULES_DECOMPRESS="no"
